@@ -5,5 +5,5 @@ gem 'json'
 gem 'json_pure'
 gem 'yajl-ruby', :require => 'yajl'
 gem 'active_support'
-#gem 'oj'
+gem 'oj'
 
