@@ -2,6 +2,11 @@
 = rufus-json CHANGELOG.txt
 
 
+== rufus-json - 1.0.4    not yet released
+
+- add support for OJ (https://github.com/ohler55/oj)
+
+
 == rufus-json - 1.0.3    released 2013/02/12
 
 - JSON.parse(s, :create_additions => false)
